# kira

./: .gitignore  README.md  pyproject.toml
kira/: __init__.py  kira.py
kira/_internals/: __init__.py  memory.py  prompts.py  router.py
tests/: test_kira.py
