[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kira"
version = "0.1.0"
description = "KIRA core - lightweight local AI memory routing + decay/reinforcement layer (free forever, hidden sauce)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Private :: Do Not Upload",
]

[project.optional-dependencies]
ollama = ["ollama"]

[tool.hatch.build.targets.wheel]
include = ["kira*.pyd"]